# qmdilib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build-dist.sh  readme
cmake/: mold-linker.cmake
demos/common/: helpbrowse.cpp  helpbrowse.h  qexeditor.cpp  qexeditor.h
demos/demo1/: demo1.pro  main.cpp  mainwindow.cpp  mainwindow.h
demos/demo2/: main2.cpp  mainwindow2.cpp  mainwindow2.h
demos/demo3/: main3.cpp  mainwindow3.h
demos/plugin-demo/: configdialog.cpp  configdialog.h  iplugin.cpp  iplugin.h  main6.cpp  plugin_demo.kdevelop  pluginmanager.cpp  pluginmanager.h  pluginmodel.cpp  pluginmodel.h  pluginwindow.ui
demos/plugin-demo/plugins/editor/: editor_cfg.ui  editor_plg.cpp  editor_plg.h  qexeditor2.cpp  qexeditor2.h
demos/plugin-demo/plugins/filesystem/: filesystembrowser.cpp  filesystembrowser.h  filesystemwidget.cpp  filesystemwidget.h
demos/plugin-demo/plugins/help/: help_plg.cpp  help_plg.h
demos/plugin-demo/plugins/richtext/: richtext_plg.cpp  richtext_plg.h  richtextclient.cpp  richtextclient.h  richtextwidget.cpp  richtextwidget.h
src/: fontwidget.cpp  fontwidget.hpp  pathwidget.cpp  pathwidget.h  qmdiactiongroup.cpp  qmdiactiongroup.h  qmdiactiongrouplist.cpp  qmdiactiongrouplist.h  qmdiclient.cpp  qmdiclient.h  qmdiconfigdialog.cpp  qmdiconfigdialog.h  qmdiconfigwidgetfactory.cpp  qmdiconfigwidgetfactory.h  qmdidialogevents.hpp  qmdiglobalconfig.cpp  qmdiglobalconfig.h  qmdihost.cpp  qmdihost.h  qmdilib-static.pro  qmdimainwindow.h  qmdipluginconfig.cpp  qmdipluginconfig.h  qmdiserver.cpp  qmdiserver.h  qmditabwidget.cpp  qmditabwidget.h  qmdiworkspace.cpp  stringlistwidget.cpp  stringlistwidget.h
tests/: configItemTests.cpp  customConfigTypeTests.cpp  globalConfigTest.cpp  pluginConfigTests.cpp  registrationTests.cpp
tools/qmdilib/: CMakeLists.txt  Doxyfile  changelog  qmdilib.dox  qmdilib.kdevelop  qmdilib.pro  readme
tools/qmdilib/demos/adv-menus/: adv-menus.html  main.cpp  mainwindow.cpp  mainwindow.h  qmdilib.kdevelop  qmdilib.kdevelop.pcs  qmdilib.kdevses  qmdilib.tag
tools/qmdilib/demos/common/: common.pri  common.qrc  demos.pri  helpbrowse.cpp  helpbrowse.h  qexeditor.cpp  qexeditor.h
tools/qmdilib/demos/demo1/: Doxyfile  adv-menus.html  adv-menus.pro  adv-menus.qrc  demo1.pro  main.cpp  mainwindow.cpp  mainwindow.h  qmdilib.kdevelop  qmdilib.kdevelop.filelist
tools/qmdilib/demos/demo2/: Doxyfile  demo2.pro  helpbrowse.h  main2.cpp  mainwindow2.cpp  mainwindow2.h  mdi-tab.cbp  mdi-tab.html  mdi-tab.layout  mdi-tab.pro
tools/qmdilib/demos/demo3/: demo3.html  demo3.pro  main3.cpp  mainwindow3.cpp  mainwindow3.h
tools/qmdilib/demos/demo4/: demo4  demo4.html  demo4.pro
tools/qmdilib/demos/demo4/qexedit/: qexedit.pro
tools/qmdilib/demos/demo4/qmdilib/: qmdilib.pro
tools/qmdilib/demos/demo4/src/: main4.cpp  mainwindow4.cpp  mainwindow4.h  src.pro
tools/qmdilib/demos/demo5/: demo5.html  demo5.pro  readme.txt
tools/qmdilib/demos/demo5/qexedit/: qexedit.pro
tools/qmdilib/demos/demo5/qextedit/: qexedit.pro
tools/qmdilib/demos/demo5/qmdilib/: qmdilib.pro
tools/qmdilib/demos/demo5/src/: demo5.qrc  main5.cpp  mainwindow5.cpp  mainwindow5.h  src.pro
tools/qmdilib/demos/demo6/: demo6.pro  main6.cpp  mainwindow6.cpp  mainwindow6.h  qmdiworkspace.cpp  qmdiworkspace.h
tools/qmdilib/demos/mdi-tab/: helpbrowse.cpp  helpbrowse.h  main2.cpp  mainwindow2.cpp  mainwindow2.h  mdi-tab.html  mdi-tab.pro  mdi-tab.qrc  mditab.kdevelop  mditab.kdevelop.filelist  mditab.kdevses  qexeditor.cpp  qexeditor.h  qmditabwidget.cpp  qmditabwidget.h
tools/qmdilib/demos/plugin-demo/: configdialog.cpp  configdialog.h  iplugin.cpp  iplugin.h  main3.cpp  main6.cpp  mainwindow3.cpp  mainwindow3.h  mainwindow6.cpp  mainwindow6.h  plugin-demo.pro  plugin_demo.kdevelop  plugin_demo.kdevelop.pcs  plugin_demo.kdevses  plugin_list.ui  pluginmanager.cpp  pluginmanager.h  pluginmodel.cpp  pluginmodel.h  pluningmanager.cpp  pluningmanager.h
tools/qmdilib/demos/plugin-demo/plugins/editor/: editor.cpp  editor.h  editor_cfg.ui  editor_plg.cpp  editor_plg.h  qexeditor2.cpp  qexeditor2.h
tools/qmdilib/demos/plugin-demo/plugins/help/: help.cpp  help.h  help_plg.cpp  help_plg.h
tools/qmdilib/demos/plugin-demo/plugins/richtext/: qexrichtextbrowser.cpp  qexrichtextbrowser.h  richtext.cpp  richtext.h  richtext_browser.cpp  richtext_browser.h  richtext_plg.cpp  richtext_plg.h  richtextclient.cpp  richtextclient.h  richtextwidget.cpp  richtextwidget.h
tools/qmdilib/doc/: qmdilib.xmi
tools/qmdilib/doc/html/: actiongroup_8cpp.html  actiongroup_8h-source.html  actiongroup_8h.html  actiongrouplist_8cpp.html  actiongrouplist_8h-source.html  actiongrouplist_8h.html  annotated.html  bug.html  classqmdiActionGroup-members.html  classqmdiActionGroup.html  classqmdiActionGroupList-members.html  classqmdiActionGroupList.html  classqmdiClient-members.html  classqmdiClient.html  classqmdiHost-members.html  classqmdiHost.html  classqmdiServer-members.html  classqmdiServer.html  classqmdiTabBar-members.html  classqmdiTabBar.html  classqmdiTabWidget-members.html  classqmdiTabWidget.html  classqmdiWorkspace-members.html  classqmdiWorkspace.html  demo1.html  demo2.html  demo3.html  demo4.html  demo5.html  demo6.html  dir_000000.html  dirs.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  pages.html  qmdiclient_8cpp.html  (+19 more)
tools/qmdilib/src/: actiongroup.cpp  actiongroup.h  actiongrouplist.cpp  actiongrouplist.h  qmdiactiongroup.cpp  qmdiactiongroup.h  qmdiactiongrouplist.cpp  qmdiactiongrouplist.h  qmdiclient.cpp  qmdiclient.h  qmdihost.cpp  qmdihost.h  qmdilib.pri  qmdilib.pro  qmdimainwindow.h  qmdiserver.cpp  qmdiserver.h  qmditabbar.cpp  qmditabbar.h  qmditabwidget.cpp  qmditabwidget.h  qmdiworkspace.cpp  qmdiworkspace.h  qorderedmap.h
